--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_gemini: ^3.0.0
   http: ^1.4.0
   image_picker: ^1.1.2
   path: ^1.9.1
